@@ -1,3 +1,7 @@
+2015-03-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/parsePOSIXt.cpp: Remove some no-longer-used code
+
 2015-03-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/parsePOSIXt.cpp: Added two more formats; also added
